--- a/Gestion Labo/Views/MaladesView.xaml
+++ b/Gestion Labo/Views/MaladesView.xaml
@@ -26,14 +26,15 @@
         <DataGrid Grid.Row="1" x:Name="BindMalades" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" AutoGenerateColumns="False">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="id" Binding="{Binding Path=malade.Id}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Nom" Binding="{Binding Path=malade.Nom}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Prénom" Binding="{Binding Path=malade.Prenom}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Date de naissance" Binding="{Binding Path=malade.Birthday}"></DataGridTextColumn>
 
                 <DataGridTemplateColumn  Header="Gere les Analyse">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button cal:Message.Attach="LoadAnalyse(BindMalades.SelectedItem)" Background="{x:Null}" BorderBrush="{x:Null}" Width="auto" Height="auto">
-                                <materialDesign:PackIcon Kind="SquareEditOutline" Foreground="Green" Width="auto" Height="auto"  />
+                                <materialDesign:PackIcon Kind="FileDocumentBoxMultipleOutline" Foreground="LightGray" Width="auto" Height="auto"  />
                             </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -42,11 +43,11 @@
                     
                 </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn  Header="Supprimer">
+                <DataGridTemplateColumn  Header="Supprimer le Malade">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button cal:Message.Attach="DeleteMalade(BindMalades.SelectedItem)" Background="{x:Null}" BorderBrush="{x:Null}" Width="auto" Height="auto">
-                                <materialDesign:PackIcon Kind="DeleteForever" Foreground="Green" Width="auto" Height="auto"  />
+                                <materialDesign:PackIcon Kind="DeleteForever" Foreground="OrangeRed" Width="auto" Height="auto"  />
                             </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
