--- a/Gestion Labo/Views/MaladesView.xaml
+++ b/Gestion Labo/Views/MaladesView.xaml
@@ -34,14 +34,22 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button cal:Message.Attach="LoadAnalyse(BindMalades.SelectedItem)" Background="{x:Null}" BorderBrush="{x:Null}" Width="auto" Height="auto">
-                                <materialDesign:PackIcon Kind="FileDocumentBoxMultipleOutline" Foreground="LightGray" Width="auto" Height="auto"  />
+                                <materialDesign:PackIcon Kind="FileDocumentBoxMultipleOutline" Foreground="Gray" Width="auto" Height="auto"  />
                             </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
-                    
-                    
-                    
                 </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn  Header="Modifier le Malade">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button cal:Message.Attach="EditMalade(BindMalades.SelectedItem)" Background="{x:Null}" BorderBrush="{x:Null}" Width="auto" Height="auto">
+                                <materialDesign:PackIcon Kind="TableEdit" Foreground="Gray" Width="auto" Height="auto"  />
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
 
                 <DataGridTemplateColumn  Header="Supprimer le Malade">
                     <DataGridTemplateColumn.CellTemplate>
@@ -51,9 +59,6 @@
                             </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
-
-
-
                 </DataGridTemplateColumn>
 
             </DataGrid.Columns>
