clean the solution

--- a/Gestion Labo/Views/ConfirmDialogView.xaml
+++ b/Gestion Labo/Views/ConfirmDialogView.xaml
@@ -6,22 +6,25 @@
         xmlns:local="clr-namespace:Gestion_Labo.Views"
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="ConfirmDialogView" Background="LightGray" Height="200" Width="350" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" WindowStyle="None">
-    <Grid>
+        Title="ConfirmDialogView" Background="{x:Null}" Height="150" Width="300" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" WindowStyle="None" AllowsTransparency="True">
+
+    <materialDesign:ColorZone Background="WhiteSmoke"  VerticalAlignment="Stretch" CornerRadius="10" BorderBrush="{DynamicResource MaterialDesignDivider}">
+    
         <StackPanel>
 
             <DockPanel>
                 <Button HorizontalAlignment="Right" x:Name="CloseDialog" Background="{x:Null}" BorderBrush="{x:Null}" Width="25" Height="25" Padding="0">
-                     <materialDesign:PackIcon Width="25" Height="25"  Kind="WindowClose"/>
+                     <materialDesign:PackIcon Width="25" Height="25" Foreground="LightGray"  Kind="WindowClose"/>
                 </Button>
              </DockPanel>
 
-            <TextBlock Margin="0 40 0 0" HorizontalAlignment="Center" Text="Vous Etes Sur ?"/>
+            <TextBlock Margin="0 15 0 15" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Vous Etes Sur ?"/>
 
-            <DockPanel Margin="40 40 40 0">
-                <Button Width="80" x:Name="ok" Content="OK" HorizontalAlignment="Left" />
-                <Button Width="80" x:Name="Cancel" HorizontalAlignment="Right" Content="Anuller" />
+            <DockPanel Margin="30 20 30 0">
+                <Button Width="100" x:Name="ok" Content="Supprimer" HorizontalAlignment="Left" />
+                <Button Width="100" x:Name="Cancel" HorizontalAlignment="Right" Content="Anuller" />
             </DockPanel>
         </StackPanel>
-    </Grid>
+    
+    </materialDesign:ColorZone>
 </Window>
