--- a/Gestion Labo/App.xaml
+++ b/Gestion Labo/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="Gestion_Labo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local1="clr-namespace:Gestion_Labo.Helpers"
              xmlns:local="clr-namespace:Gestion_Labo">
+    
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -16,7 +18,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Green.Named.Primary.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
-            
+            <local1:BooleanToVisibilityConverter x:Key="booleanToVisibiltyConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
