--- a/Gestion Labo/Views/AddAnalyseView.xaml
+++ b/Gestion Labo/Views/AddAnalyseView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d" Background="LightGray"
-        Title="AddAnalyseView" Height="450" Width="800" WindowStartupLocation="CenterOwner">
+        Title="AddAnalyseView" FontFamily="Century Gothic" Height="450" Width="800" WindowStartupLocation="CenterOwner">
     <Grid>
 
         <materialDesign:PackIcon Margin="20 20 0 20" VerticalAlignment="Center" HorizontalAlignment="Left"  Kind="Account" Foreground="{Binding ElementName=Resultat, Path=BorderBrush}" />
