--- a/Gestion Labo/Views/AddMaladeView.xaml
+++ b/Gestion Labo/Views/AddMaladeView.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="1280" Background="Silver" FontSize="18">
+             d:DesignHeight="600" FontFamily="Century Gothic" d:DesignWidth="1280" Background="Silver" FontSize="18">
     <Grid>
 
         <Grid.RowDefinitions>
