--- a/Gestion Labo/Views/AnalyseView.xaml
+++ b/Gestion Labo/Views/AnalyseView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d" Background="LightGray"
-        Title="AnalyseView" Height="600" Width="1000" WindowStartupLocation="CenterOwner">
+        Title="AnalyseView" FontFamily="Century Gothic" Height="600" Width="1000" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
