--- a/Gestion Labo/Views/EditAnalyseView.xaml
+++ b/Gestion Labo/Views/EditAnalyseView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
-        Title="EditAnalyseView" Height="450" Width="800" WindowStartupLocation="CenterOwner">
+        Title="EditAnalyseView" FontFamily="Century Gothic" Height="450" Width="800" WindowStartupLocation="CenterOwner">
     <Grid>
 
 
