--- a/Gestion Labo/Views/EditMaladeView.xaml
+++ b/Gestion Labo/Views/EditMaladeView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
-        Title="EditMaladeView" Height="450" Width="800" WindowStartupLocation="CenterOwner">
+        Title="EditMaladeView" FontFamily="Century Gothic" Height="450" Width="800" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
