--- a/Gestion Labo/Views/SuccessDialogView.xaml
+++ b/Gestion Labo/Views/SuccessDialogView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_Labo.Views"
         mc:Ignorable="d"
-        Title="SuccessDialogView" Height="450" Width="800">
+        Title="SuccessDialogView" FontFamily="Century Gothic" Height="450" Width="800">
     <Grid>
         
     </Grid>
